syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

package pb; // 包名
option go_package = "/pb";
service Greeter{
  rpc SayHello(HelloRequest) returns (HelloReply){}
}
message HelloRequest{
  string name = 1;
}
message HelloReply{
  string message = 1;
}
